--- a/cityfix-frontend/package.json
+++ b/cityfix-frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.17",
+    "axios": "^1.13.2",
     "firebase": "^12.8.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.12.0",
     "react-toastify": "^11.0.5",
