--- a/cityfix-frontend/package.json
+++ b/cityfix-frontend/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.12.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.7.0",
     "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.18"
   },
