--- a/cityfix-frontend/package.json
+++ b/cityfix-frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.17",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "firebase": "^12.8.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
